@@ -2716,7 +2716,7 @@
     ],
     "iconIndex": 510,
     "name": "Vishnu's Aegis",
-    "note": "<Upgrade Slots: 4>\n\n<Synthesis Ingredients>\nVishnu's Shield\nTurtle Shield\nTellurian Knight's Bulwark\nThick-Skinned Herb: 10\nTellurium Alloy\n</Synthesis Ingredients>\n<Mask Name: Damage-Soaking Debuff-Stopping Super-Shield>",
+    "note": "<Upgrade Slots: 4>\n\n<Synthesis Ingredients>\nVishnu's Shield\nTurtle Shield\nTellurian Knight's Bulwark\nThick-Skinned Herb: 15\nTellurium Alloy\n</Synthesis Ingredients>\n<Mask Name: Damage-Soaking Debuff-Stopping Super-Shield>",
     "params": [
       0,
       0,
