@@ -2183,7 +2183,7 @@
       "type": 0,
       "variance": 20
     },
-    "description": "Ripped from the heart of a vigilant automaton.\nAn key component for forging tellurium weapons.",
+    "description": "Ripped from the heart of a vigilant automaton.\nA key component for forging tellurium equipment.",
     "effects": [],
     "hitType": 0,
     "iconIndex": 431,
