@@ -1623,7 +1623,7 @@
     ],
     "iconIndex": 692,
     "name": "Bloodlust ★★",
-    "note": "<Weapon Image: 206>\n<Upgrade Slots: 3>\n<HP Life Steal Physical: +6%>\n\n<Synthesis Ingredients>\nBloodlust ★\nEctoplasm: 3\nTellurium Alloy\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Even Better Bloody Dagger>",
+    "note": "<Weapon Image: 206>\n<Upgrade Slots: 3>\n<HP Life Steal Physical: +6%>\n\n<Synthesis Ingredients>\nBloodlust ★\nStinger: 5\nTellurium Alloy\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Even Better Bloody Dagger>",
     "params": [
       10,
       5,
@@ -1666,7 +1666,7 @@
     ],
     "iconIndex": 1204,
     "name": "Hero Sword Replica",
-    "note": "<Weapon Image: 346>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nSquire Sword\nCopper Sword\nSteel Sword\nBronze Sword\nShadowspec Sword\nBronze Greatsword\nSteel Greatsword\nSteel Axe\nUnstoppable Force\nTellurium Alloy\n</Synthesis Ingredients>\n<Mask Name: Legendary Blade Copy>",
+    "note": "<Weapon Image: 346>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nSquire Sword\nCopper Sword\nSteel Sword\nBronze Sword\nShadowspec Sword\nBronze Greatsword\nSteel Greatsword\nSteel Axe\nUnstoppable Force\nTellurium Alloy\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Legendary Blade Copy>",
     "params": [
       0,
       0,
