@@ -17,8 +17,9 @@ Changes:
  - Fire takes 25% damage from Ice instead of 0%.
  - Ethereal Bat Wing can drop more than once.
  - Reduced bits/EXP variation from 5% to 3%.
- - Apocalypse uses idle motion in place of dying/dead motions.
+ - Adjusted a few tellurium related recipes.
  - Infernal Coin now dropped by Apocalypse instead of crafted with Infernal Wand.
+ - Apocalypse uses idle motion in place of dying/dead motions.
 
 Bug Fixes:
  - Fixed a memory leak when rendering characters in tall chairs.
